[gd_scene load_steps=8 format=3 uid="uid://d25ao2eg2lfvp"]

[ext_resource type="Texture2D" uid="uid://bbsq6me1qnqy7" path="res://menus/mainMenu/mainMenu.png" id="1_21hlt"]
[ext_resource type="Script" path="res://menus/mainMenu/main_menu.gd" id="1_syo1w"]
[ext_resource type="FontFile" uid="uid://bhau1nh8nfrs6" path="res://menus/fonts/CinzelDecorative-Bold.ttf" id="2_k6txu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wv72i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_03nbl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_11bqd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_77wkt"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("playButton", "optionsButton", "creditsButton", "exitButton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_syo1w")
playButton = NodePath("Viewport/MarginContainer/Play/playButton")
optionsButton = NodePath("Viewport/MarginContainer/Options/optionsButton")
creditsButton = NodePath("Viewport/MarginContainer/Credits/creditsButton")
exitButton = NodePath("Viewport/MarginContainer/Exit/exitButton")
tweenIntensity = 1.1

[node name="Viewport" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="Viewport"]
layout_mode = 2
texture = ExtResource("1_21hlt")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Viewport"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 60

[node name="Title" type="Control" parent="Viewport/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="Viewport/MarginContainer/Title"]
layout_mode = 0
offset_right = 264.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("2_k6txu")
theme_override_font_sizes/font_size = 64
text = "MELODIC DUNGEON"

[node name="Play" type="Control" parent="Viewport/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="playButton" type="Button" parent="Viewport/MarginContainer/Play"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -74.0
offset_right = 354.0
offset_bottom = -24.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_k6txu")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_wv72i")
text = "Enter the Dungeon"
flat = true
alignment = 0

[node name="Options" type="Control" parent="Viewport/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="optionsButton" type="Button" parent="Viewport/MarginContainer/Options"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 156.0
offset_bottom = 35.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_k6txu")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_03nbl")
text = "Options"
flat = true

[node name="Credits" type="Control" parent="Viewport/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="creditsButton" type="Button" parent="Viewport/MarginContainer/Credits"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 46.0
offset_right = 154.0
offset_bottom = 96.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_k6txu")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_11bqd")
text = "Credits"
flat = true

[node name="Exit" type="Control" parent="Viewport/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="exitButton" type="Button" parent="Viewport/MarginContainer/Exit"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 106.0
offset_right = 154.0
offset_bottom = 156.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_k6txu")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_77wkt")
text = "Exit"
flat = true
alignment = 0

[connection signal="pressed" from="Viewport/MarginContainer/Play/playButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Viewport/MarginContainer/Options/optionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Viewport/MarginContainer/Credits/creditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Viewport/MarginContainer/Exit/exitButton" to="." method="_on_exit_button_pressed"]
